--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#4D4D4D</color>
+    <color name="colorBlue">#0A21A3</color>
     <color name="colorCardBack">#262035</color>
     <color name="colorRed">#FF5252</color>
     <color name="colorHighlight">#69F0AE</color>
