--- a/app/src/main/res/layout/fragment_doc_detail.xml
+++ b/app/src/main/res/layout/fragment_doc_detail.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:elevation="1dp"
         android:ellipsize="end"
         android:fontFamily="@font/ubuntu_light"
