--- a/app/src/main/res/layout/fragment_doc_list.xml
+++ b/app/src/main/res/layout/fragment_doc_list.xml
@@ -35,6 +35,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
+        android:layoutAnimation="@anim/layout_animation_list_item"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/rl_add_container"
         app:layout_constraintEnd_toEndOf="parent"
